# inference-gateway

./: .env.example  .gitignore  CLAUDE.md  README.md  SUBMISSION.md  chat_ui.py  config.yaml.example  crew.py  main.py  nginx-gateway-lb.conf  project_deliverables.md  pyproject.toml  submission.ipynb
.github/prompts/: plan-latencyAndRealBackendTests.prompt.md
data/: experiments.csv
docs/: architecture.mmd
gateway/: config.py  prom_metrics.py
gateway/backends/: __init__.py  base.py  echo.py  http_backend.py
logs/gateway/: gateway_metrics_2026-04-11.jsonl  gateway_metrics_2026-04-12.jsonl
modal/: vllm_gemma4.py  vllm_gemma4_baseline.py  vllm_gemma4_hardcore.py  vllm_gemma4_optimized.py  vllm_nuextract3_a100.py
monitoring/: docker-compose.yml  prometheus.yml
monitoring/grafana_dashboards/: gateway-deep-diagnostics.json  gateway-proxy.json  overview.json  technique-cost.json  tinyllama-ops.json  vllm-ops.json
plan/: implementation_plan.md
scripts/: _common.sh  deploy_modal_vllm.sh  export_pdf.sh  gen_nuextract3_bruno_env.sh  mermaid_to_excalidraw.mjs  run_experiments.sh  start_stack.sh  test_nuextract3_meldebescheinigung.py  test_nuextract3_meldebescheinigung.sh
tests/: test_crew.py  test_gateway.py  test_scripts.py
tests/bruno/: bruno.json  collection.bru
tests/bruno/Auth/: auth_correct_key.bru  auth_no_header.bru
tests/bruno/GET endpoints/: backends_list.bru  folder.bru  health.bru  healthz.bru  index.bru  models_list.bru  prometheus_metrics.bru  unknown_route_get.bru  v1_models.bru
tests/bruno/Metrics/: Metrics - X-Technique baseline.bru  (+10 more)
(+46 files in other folders)
