[project]
name = "inference-gateway"
version = "0.1.0"
description = "OpenAI-compatible HTTP inference gateway with echo mode and backend proxy support"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "prometheus_client>=0.20",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
]

[project.scripts]
inference-gateway = "main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-m 'not live'"
markers = [
    "live: mark test as requiring a live backend (deselected by default)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.15.3",
]
deploy = [
    "modal>=0.73",
]
crew = [
    "crewai>=0.76",
    "litellm>=1.50",
    "gradio>=6.0",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]
